2008-02-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Expand sitelibdir when checking prefix.  Fixes bug
	#17983 by Hemant Kumar.
	* setup.rb:  Print release notes on installation.  Tell people where
	`gem` was installed.
	* bin/update_rubygems:  Added --help output to explain how to install
	earlier versions of RubyGems.  Added --version option workaround.
	Fixes bug #16842 by Chad Woolley.
	* lib/rubygems/install_command.rb:  Give proper exit code on failure.
	Fixes bug #17438 by Josh Nichols.

2008-02-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Change hosts correctly when
	redirecting.  Handle EOFError from Net::HTTP.
	* lib/rubygems/commands/specification_command.rb:  Pull specifications
	from gem files.
	* lib/rubygems/uninstaller.rb:  When :executable is set, don't ask the
	user.  Fixes bug #16812 by Matt Mower.  Raise exception instead of
	printing message when gem is not in GEM_HOME.
	* lib/rubygems/uninstall_command.rb:  Print message when gem is not in
	GEM_HOME.
	* lib/rubygems/commands/cleanup_command.rb:  Clean up all old gems.
	* lib/rubygems/commands/unpack_command.rb:  Scan every gem path when
	unpacking.  Fixes bug #17602 by Ryan Davis.

2008-02-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/install_update_options.rb: Add --bindir option to
	specify destination to install executables into.  Patch #17937 by
	Donavan Pantke.
	* lib/rubygems/specification.rb: Fix Time.today == Time.today.  Bug
	#17413 by Andrei Bocan.
	* setup.rb: Properly check for deletablitily of user and system
	caches.  Bug #17869 by Alexey Verkhovsky.  Fix --no-format-executable.
	Fixes bug #16879 by Charles Nutter.

2008-02-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb: Add persistent connection support.
	Patch #18180 by Aaron Patterson.
	* lib/rubygems/installer.rb: Fix #shebang to use the ruby install
	name.  Patch #16878 by Donavan Pantke.